--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -1,5 +1,8 @@
 name: Publish to NPM
-on: [workflow_dispatch]
+on:
+  push:
+    branches:
+      - main
 jobs:
   publish:
     runs-on: ubuntu-latest
