update to try other actions

--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -4,21 +4,22 @@ on:
     branches:
       - main
 jobs:
-  publish:
+  tag:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: tool3/bump@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          unrelated: true
+
+  publisher:
+    needs: tag
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+      - uses: tool3/publisher@v1
         with:
-          node-version: 16
-      - name: Update version in package.json
-        uses: maks-stupak/gh-action-bump-version@v7.1.5
-        with:
-          tag-prefix: ""
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: npm install
-      - run: npm test
-      - uses: JS-DevTools/npm-publish@v1
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
+          npm_token: ${{ secrets.NPM_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          scope: "@tool3"
