--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -7,9 +7,10 @@ jobs:
   tag:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@main
-      - uses: tool3/bump@main
+      - uses: actions/checkout@master
+      - uses: tool3/bump@master
         with:
+          branch: main
           github_token: ${{ secrets.GITHUB_TOKEN }}
           unrelated: true
 
@@ -20,6 +21,7 @@ jobs:
       - uses: actions/checkout@v1
       - uses: tool3/publisher@v1
         with:
+          branch: main
           npm_token: ${{ secrets.NPM_TOKEN }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
           scope: "@tool3"
