--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -7,7 +7,7 @@ jobs:
   tag:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@vmaster
+      - uses: actions/checkout@master
       - uses: tool3/bump@master
         with:
           branch: main
