dry run publish

--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -26,4 +26,5 @@ jobs:
       - run: npm test
       - uses: JS-DevTools/npm-publish@v1
         with:
+          dry-run: true
           token: ${{ secrets.NPM_TOKEN }}
