trying new checkout

--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -1,4 +1,4 @@
-name: Publish to NPM
+name: Release from Master on Push
 on:
   push:
     branches:
@@ -18,7 +18,7 @@ jobs:
     needs: tag
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@master
       - uses: actions/setup-node@v1
         with:
           node-version: 16
