--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "asn1js": "^2.1.1",
     "console-browserify": "^1.2.0",
     "keytar": "^7.7.0",
+    "node-git-server": "^0.6.1",
     "pkijs": "^2.1.95",
     "process": "^0.11.10",
     "pvutils": "^1.0.17",
