--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "asn1js": "^2.1.1",
     "console-browserify": "^1.2.0",
     "keytar": "^7.7.0",
+    "node-fetch": "2",
     "pkijs": "^2.1.95",
     "process": "^0.11.10",
     "pvutils": "^1.0.17",
     "simple-jsonrpc-js": "^1.2.0"
   },
   "devDependencies": {
+    "@types/node-fetch": "2",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
