--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "@types/atob": "^2.1.2",
     "@types/node-fetch": "2",
     "node-polyfill-webpack-plugin": "^1.1.4",
+    "protoc-gen-grpc-web": "^1.3.0",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
+    "ts-proto": "^1.104.0",
     "typescript": "^4.3.4",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2"
@@ -49,6 +51,7 @@
     "path": false
   },
   "files": [
-    "umd/"
+    "umd/",
+    "build/**/*.d.ts"
   ]
 }
