--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "@cosmjs/launchpad": "^0.25.5",
     "@cosmjs/proto-signing": "^0.25.5",
-    "@cosmjs/stargate": "^0.25.5",
+    "@cosmjs/stargate": "^0.28.6",
+    "@cosmjs/tendermint-rpc": "^0.28.4",
     "asn1js": "^2.1.1",
     "atob": "^2.1.2",
     "axios": "^0.24.0",
