--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "build": "rm -rf build/ && yarn build:tsc && yarn build:build",
     "build:production": "NODE_ENV=production yarn build:tsc && yarn build:build",
-    "build:tsc": "yarn tsc",
+    "build:tsc": "rm -Rf build && yarn tsc",
     "dev:watch": "yarn tsc -- --watch",
     "build:build": "yarn webpack",
     "test": "yarn test:unit",
