--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,6 +68,9 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
+  "include": [
+    "./src"
+  ],
   "exclude": [
     "./examples",
     "./tests"
