--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "main": "build/index.js",
   "types": "build/",
+  "engines": {
+    "node": ">18"
+  },
   "scripts": {
     "build": "rm -rf build/ && yarn build:tsc && yarn build:build",
     "build:production": "NODE_ENV=production yarn build:tsc && yarn build:build",
