--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   },
   "main": "build/index.js",
   "types": "build/",
+  "engines": {
+    "node": ">18.0.0"
+  },
   "scripts": {
     "build": "rm -rf build/ && yarn build:tsc && yarn build:build",
     "build:production": "NODE_ENV=production yarn build:tsc && yarn build:build",
@@ -29,6 +32,8 @@
     "axios": "^0.24.0",
     "console-browserify": "^1.2.0",
     "cosmwasm": "^1.1.1",
+    "js-yaml": "^4.1.0",
+    "json-stable-stringify": "^1.0.2",
     "keytar": "^7.7.0",
     "node-fetch": "2",
     "pkijs": "^2.1.95",
@@ -38,6 +43,8 @@
   },
   "devDependencies": {
     "@types/atob": "^2.1.2",
+    "@types/js-yaml": "^4.0.5",
+    "@types/json-stable-stringify": "^1.0.34",
     "@types/node-fetch": "2",
     "@types/sinon": "^10.0.11",
     "@types/tap": "^15.0.5",
