fix: clean up new groups

--- a/tests/fixtures/gpu_basic.sdl.yml
+++ b/tests/fixtures/gpu_basic.sdl.yml
@@ -32,6 +32,7 @@ profiles:
     westcoast:
       attributes:
         region: us-west
+        foo: bar
       signedBy:
         anyOf:
           - 1
