--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "prepare": "husky",
     "prepublishOnly": "npm run build:production",
     "test": "npm run test:unit",
-    "test:unit": "tap --ts tests/test_*.ts",
-    "test:unit-snapshot": "tap --ts --snapshot tests/test_*.ts"
+    "test:cov": "jest --selectProjects unit functional --coverage",
+    "test:unit": "tap --ts tests/test_*.ts && jest --selectProjects unit",
+    "test:unit-snapshot": "tap --ts --snapshot tests/test_*.ts",
+    "test:unit:cov": "jest --selectProjects unit --coverage",
+    "test:unit:watch": "jest --selectProjects unit --watch"
   },
   "lint-staged": {
     "*.{js,ts}": [
@@ -59,7 +62,9 @@
     "simple-jsonrpc-js": "^1.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/atob": "^2.1.2",
+    "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.5",
     "@types/json-stable-stringify": "^1.0.34",
     "@types/node-fetch": "2",
@@ -67,12 +72,14 @@
     "@types/tap": "^15.0.5",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "husky": "^9.0.11",
+    "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.1",
     "sinon": "^13.0.1",
     "tap": "^15.1.6",
+    "ts-jest": "^29.1.2",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "ts-proto": "^1.104.0",
