ci: adds more CI validations, introduces semantic release (#74)
Also:
- Uses semantic release
- Adds checks on before commit and in CI: eslint and commit lint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,15 @@
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
-    "@typescript-eslint/no-unused-vars": ["error", { "ignoreRestSiblings": true }]
-  }
+    "@typescript-eslint/no-unused-vars": ["error", { "ignoreRestSiblings": true }],
+    "@typescript-eslint/no-explicit-any": "warn"
+  },
+  "overrides": [
+    {
+      "files": ["*.js"],
+      "rules": {
+        "@typescript-eslint/no-var-requires": "off"
+      }
+    }
+  ]
 }
