--- a/package.json
+++ b/package.json
@@ -1,46 +1,9 @@
 {
-  "name": "@akashnetwork/akashjs",
-  "version": "0.5.12",
-  "description": "Akash Network JS SDK",
-  "repository": {
-    "url": "https://github.com/ovrclk/akashjs"
-  },
-  "license": "Apache-2.0",
   "author": "",
-  "main": "build/index.js",
   "browser": {
     "fs": false,
     "os": false,
     "path": false
-  },
-  "types": "build/",
-  "files": [
-    "umd/",
-    "build/**/*.d.ts",
-    "build/**/*.js"
-  ],
-  "scripts": {
-    "build": "rimraf build && npm run build:tsc && npm run build:build",
-    "build:build": "webpack",
-    "build:production": "NODE_ENV=production npm run build:tsc && npm run build:build",
-    "build:tsc": "rimraf build && tsc",
-    "dev:watch": "tsc -- --watch",
-    "format": "prettier --write './**/*.{js,ts,json}' --config ./.prettierrc",
-    "lint": "eslint . --ext .js,.ts,.json",
-    "lint:fix": "npm run lint -- --fix",
-    "prepare": "husky",
-    "prepublishOnly": "npm run build:production",
-    "test": "npm run test:unit",
-    "test:cov": "jest --selectProjects unit functional --coverage",
-    "test:unit": "tap --ts tests/test_*.ts && jest --selectProjects unit",
-    "test:unit-snapshot": "tap --ts --snapshot tests/test_*.ts",
-    "test:unit:cov": "jest --selectProjects unit --coverage",
-    "test:unit:watch": "jest --selectProjects unit --watch"
-  },
-  "lint-staged": {
-    "*.{js,ts}": [
-      "npm run format"
-    ]
   },
   "dependencies": {
     "@akashnetwork/akash-api": "^1.0.2",
@@ -60,10 +23,19 @@
     "pkijs": "^3.0.0",
     "process": "^0.11.10",
     "pvutils": "^1.0.17",
-    "simple-jsonrpc-js": "^1.2.0"
+    "simple-jsonrpc-js": "^1.2.0",
+    "sort-json": "^2.0.1"
   },
+  "description": "Akash Network JS SDK",
   "devDependencies": {
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-conventional": "^19.2.2",
     "@faker-js/faker": "^8.4.1",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^12.0.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^10.0.3",
+    "@semantic-release/release-notes-generator": "^13.0.0",
     "@types/atob": "^2.1.2",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.5",
@@ -72,6 +44,8 @@
     "@types/sinon": "^10.0.11",
     "@types/tap": "^15.0.5",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "commitlint": "^19.2.2",
+    "conventional-changelog-conventionalcommits": "^7.0.2",
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
@@ -90,5 +64,50 @@
   },
   "engines": {
     "node": ">18.0.0"
-  }
+  },
+  "files": [
+    "umd/",
+    "build/**/*.d.ts",
+    "build/**/*.js"
+  ],
+  "license": "Apache-2.0",
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "npm run test",
+      "npm run lint:fix",
+      "npm run format"
+    ],
+    "package.json": [
+      "sort-json package.json"
+    ],
+    "tsconfig.json": [
+      "sort-json tsconfig.json"
+    ]
+  },
+  "main": "build/index.js",
+  "name": "@akashnetwork/akashjs",
+  "repository": {
+    "url": "https://github.com/ovrclk/akashjs"
+  },
+  "scripts": {
+    "build": "rimraf build && npm run build:tsc && npm run build:build",
+    "build:build": "webpack",
+    "build:production": "NODE_ENV=production npm run build:tsc && npm run build:build",
+    "build:tsc": "rimraf build && tsc",
+    "commitlint": "commitlint --edit",
+    "dev:watch": "tsc -- --watch",
+    "format": "prettier --write './**/*.{js,ts,json}' --config ./.prettierrc",
+    "lint": "eslint . --ext .js,.ts,.json -c .eslintrc.json",
+    "lint:fix": "npm run lint -- --fix",
+    "prepare": "husky",
+    "prepublishOnly": "npm run build:production",
+    "test": "npm run test:unit",
+    "test:cov": "jest --selectProjects unit functional --coverage",
+    "test:unit": "tap --ts tests/test_*.ts && jest --selectProjects unit",
+    "test:unit-snapshot": "tap --ts --snapshot tests/test_*.ts",
+    "test:unit:cov": "jest --selectProjects unit --coverage",
+    "test:unit:watch": "jest --selectProjects unit --watch"
+  },
+  "types": "build/",
+  "version": "0.5.11"
 }
