--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
   "main": "build/index.js",
   "name": "@akashnetwork/akashjs",
   "repository": {
-    "url": "https://github.com/ovrclk/akashjs"
+    "url": "https://github.com/akash-network/akashjs"
   },
   "scripts": {
     "build": "rimraf build && npm run build:tsc && npm run build:build",
