ci: use latest node version

--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -5,7 +5,7 @@ inputs:
   node-version:
     description: 'Node.js version to setup'
     required: true
-    default: '18.0.0'
+    default: 'v20.11.1'
 
 runs:
   using: 'composite'
