--- a/.commitlintrc.json
+++ b/.commitlintrc.json
@@ -1,18 +1,6 @@
 {
-  "extends": [
-    "@commitlint/config-conventional"
-  ],
+  "extends": ["@commitlint/config-conventional"],
   "rules": {
-    "scope-enum": [
-      2,
-      "always",
-      [
-        "certificates",
-        "network",
-        "wallet",
-        "api",
-        "stargate"
-      ]
-    ]
+    "scope-enum": [2, "always", ["certificates", "network", "wallet", "api", "stargate"]]
   }
 }
