fix: prevent duplicate persistent attribute when using ram storage

--- a/tests/fixtures/persistent_storage_valid.sdl.yml
+++ b/tests/fixtures/persistent_storage_valid.sdl.yml
@@ -79,6 +79,11 @@ profiles:
             size: 1Gi
             attributes:
               class: ram
+          - name: shm2
+            size: 1Gi
+            attributes:
+              class: ram
+              persistent: false
   placement:
     akash:
       #######################################################
