--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.5",
     "@types/json-stable-stringify": "^1.0.34",
+    "@types/lodash": "^4.17.1",
     "@types/node-fetch": "2",
     "@types/sinon": "^10.0.11",
     "@types/tap": "^15.0.5",
@@ -49,6 +50,7 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
+    "lodash": "^4.17.21",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.1",
