test(sdl): cover denom validation
also improve basic yml templating with default values

refs akash-network/cloudmos#133

--- a/test/fixtures/sdl-basic.yml
+++ b/test/fixtures/sdl-basic.yml
@@ -25,7 +25,7 @@ profiles:
     dcloud:
       pricing:
         web:
-          denom: uakt
+          denom: ${denom}
           amount: 1000
 
 deployment:
