--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,5 +69,5 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "include": ["./src/**/*"],
-  "exclude": ["./examples", "./tests"]
+  "exclude": ["./examples", "./tests", "./test", "./src/**/*.spec.ts"]
 }
