feat(certificates): implement certificate manager
After the implementation from cloudmos

refs akash-network/akashjs#76

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cosmwasm": "^1.1.1",
     "js-yaml": "^4.1.0",
     "json-stable-stringify": "^1.0.2",
+    "jsrsasign": "^11.1.0",
     "keytar": "^7.7.0",
     "node-fetch": "2",
     "pkijs": "^3.0.0",
