--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@semantic-release/github": "^10.0.3",
     "@semantic-release/release-notes-generator": "^13.0.0",
     "@types/atob": "^2.1.2",
+    "@types/dot-object": "^2.1.6",
     "@types/jest": "^29.5.12",
     "@types/js-yaml": "^4.0.5",
     "@types/json-stable-stringify": "^1.0.34",
@@ -48,7 +49,9 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "commitlint": "^19.2.2",
     "conventional-changelog-conventionalcommits": "^7.0.2",
+    "dot-object": "^2.1.5",
     "husky": "^9.0.11",
+    "immutability-helper": "^3.1.1",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
     "lodash": "^4.17.21",
