Updated examples and add integration tests
* **examples/get_lease_status.ts**
  - Updated `getRpc` function to use a valid RPC endpoint
  - Updated `QueryLeaseRequest` object with valid parameters
  - Added error handling for `client.Lease` call

* **examples/get_deployments.ts**
  - Updated `getRpc` function to use a valid RPC endpoint
  - Updated `QueryDeploymentsRequest` object with valid parameters
  - Added error handling for `client.Deployments` call

* **tests/test_examples.ts**
  - Imported necessary modules and functions
  - Wrote test cases for each example in the `examples` directory
  - Used `exec` to run each example and verify the output

* **examples/README.md**
  - Added instructions on running the integration tests
  - Updated the examples to reflect the changes made

* **.github/workflows/test.yml**
  - Added a new job to run the integration tests
  - Used `npm test` to run the tests

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,3 +12,21 @@ jobs:
     name: Test
     uses: ./.github/workflows/test-reusable.yml
     secrets: inherit
+
+  integration-tests:
+    name: Integration Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run integration tests
+        run: npm test
