--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
   },
   "dependencies": {
     "@akashnetwork/akash-api": "^1.4.0",
+    "@cosmjs/amino": "^0.32.4",
     "@cosmjs/launchpad": "^0.27.0",
-    "@cosmjs/proto-signing": "^0.28.11",
-    "@cosmjs/stargate": "^0.28.0",
-    "@cosmjs/tendermint-rpc": "^0.28.11",
+    "@cosmjs/proto-signing": "^0.32.4",
+    "@cosmjs/stargate": "^0.32.4",
+    "@cosmjs/tendermint-rpc": "^0.32.4",
     "asn1js": "^2.1.1",
     "atob": "^2.1.2",
     "axios": "^0.24.0",
     "console-browserify": "^1.2.0",
-    "cosmwasm": "^1.1.1",
     "js-yaml": "^4.1.0",
     "json-stable-stringify": "^1.0.2",
     "jsrsasign": "^11.1.0",
