--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "process": "^0.11.10",
     "pvutils": "^1.0.17",
     "simple-jsonrpc-js": "^1.2.0",
-    "sort-json": "^2.0.1"
+    "sort-json": "^2.0.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.2",
@@ -93,7 +94,6 @@
     "immutability-helper": "^3.1.1",
     "jest": "^29.7.0",
     "lint-staged": "^15.2.2",
-    "lodash": "^4.17.21",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.1",
