chore(deps): upgrade TypeScript to version 5.7.2
- Updated TypeScript to version 5.7.2 for improved features and performance.
- Ensured compatibility with existing TypeScript configuration.

Signed-off-by: Greg Osuri <me@gregosuri.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "./tsconfig.build.json",
   "include": ["./src/**/*"],
-  "exclude": ["./examples", "./tests", "./test", "./src/**/*.spec.ts"]
+  "exclude": ["./examples", "./tests", "./test", "./src/**/*.spec.ts"],
+  "compilerOptions": {
+    "module": "Node16",
+    "moduleResolution": "Node16"
+  }
 }
