--- a/package.json
+++ b/package.json
@@ -60,13 +60,13 @@
     "json-stable-stringify": "^1.0.2",
     "jsrsasign": "^11.1.0",
     "keytar": "^7.7.0",
+    "lodash": "^4.17.21",
     "node-fetch": "2",
     "pkijs": "^3.0.0",
     "process": "^0.11.10",
     "pvutils": "^1.0.17",
     "simple-jsonrpc-js": "^1.2.0",
-    "sort-json": "^2.0.1",
-    "lodash": "^4.17.21"
+    "sort-json": "^2.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.2.2",
@@ -104,7 +104,7 @@
     "ts-node": "^10.0.0",
     "ts-proto": "^1.104.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^4.7.4",
+    "typescript": "^5.7.2",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2"
   },
