--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "ts-node": "^10.0.0",
     "ts-proto": "^1.104.0",
     "tsconfig-paths": "^4.2.0",
+    "typedoc": "^0.27.5",
     "typescript": "^5.7.2",
     "webpack": "^5.41.1",
     "webpack-cli": "^4.7.2"
