Add example function to check endpoint health status
- Implemented `checkEndpointHealth` function to demonstrate how to retrieve and log the health status of network endpoints.
- Utilized `getEndpoints` and `getEndpointHealthStatus` to fetch and evaluate endpoint response times.
- Included error handling to manage potential issues during the health check process.

Signed-off-by: Greg Osuri <me@gregosuri.com>

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "test:unit": "tap --ts tests/test_*.ts && jest --selectProjects unit",
     "test:unit-snapshot": "tap --ts --snapshot tests/test_*.ts",
     "test:unit:cov": "jest --selectProjects unit --coverage",
-    "test:unit:watch": "jest --selectProjects unit --watch"
+    "test:unit:watch": "jest --selectProjects unit --watch",
+    "docs": "npx typedoc src/index.ts --out docs"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
