docs(wallet): enhance documentation for getAccount function
- Added detailed description of the getAccount function.
- Included a @throws clause to document potential error conditions.
- Provided an example usage with error handling for better clarity.

Signed-off-by: Greg Osuri <me@gregosuri.com>

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@akashnetwork/akashjs",
   "version": "0.10.1",
-  "description": "Akash Network JS SDK",
+  "description": "Akash Network JavaScript SDK",
   "repository": {
     "url": "https://github.com/akash-network/akashjs"
   },
